fix: 修正 workflow 版本號格式 - 代碼用不帶v，tag用帶v

--- a/打包與發布說明.md
+++ b/打包與發布說明.md
@@ -1,11 +1,86 @@
+# 打包與發布說明
+
+## 本地打包
+
+### 使用方式
+
+運行 `localpack.bat` 腳本進行本地打包：
+
+```batch
+localpack.bat
+```
+
+### 前置條件
+
+1. 安裝 Anaconda
+2. 創建名為 `vpy` 的虛擬環境
+3. 修改 `localpack.bat` 中的 `ANACONDA_PATH` 為你的 Anaconda 路徑
+
+### 輸出
+
+打包完成後，可執行文件位於：`dist/wvd/wvd.exe`
+
+---
+
+## GitHub Actions 自動打包與發布
+
+### 觸發條件
+
+1. **推送到 master 分支**：每次推送都會觸發
+2. **推送 v 開頭的 tag**：如 `v1.9.25-custom.2`
+3. **手動觸發**：在 GitHub Actions 頁面點擊 "Run workflow"
+
+### 工作流程
+
+1. 從 `src/main.py` 提取版本號（`__version__`）
+2. 安裝依賴並使用 PyInstaller 打包
+3. 創建 `wvd.zip` 壓縮包
+4. 創建 GitHub Release 並上傳 ZIP
+
+### 版本號格式
+
+`src/main.py` 中的版本號必須符合 SemVer 格式且**帶 v 前綴**：
+
+```python
+__version__ = 'v1.9.25-custom.2'  # ✓ 正確
+__version__ = '1.9.25-custom.2'   # ✗ 錯誤（與 tag 不匹配）
+```
+
+### 發布新版本步驟
+
+```bash
+# 1. 更新版本號
+# 編輯 src/main.py 中的 __version__
+
+# 2. 提交並推送
+git add -A
+git commit -m "release: vX.X.X"
+git push origin master
+
+# 3. 創建並推送 tag
+git tag vX.X.X
+git push origin vX.X.X
+```
+
+### 查看構建狀態
+
+前往 https://github.com/adolphlai/wvd/actions
+
+---
+
+## Workflow 原始碼
+
+檔案位置：`.github/workflows/build-executable.yml`
+
+```yaml
 name: Build Executable and Create Release
 
 on:
   push:
     branches: [ master ]
     tags:
-      - 'v*'  # 當推送 v 開頭的 tag 時觸發（如 v1.9.20）
-  workflow_dispatch:  # 允許在 GitHub 網頁手動觸發
+      - 'v*'
+  workflow_dispatch:
 
 jobs:
   build:
@@ -15,35 +90,23 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    # Step 1: Extract version from source code and check if it's a pre-release.
     - name: Extract SemVer version from src\main.py
       id: extract-version
       shell: pwsh
       run: |
         $filePath = ".\src\main.py"
-        if (-not (Test-Path -Path $filePath)) {
-          Write-Error "File $filePath not found!"
-          exit 1
-        }
-
-        # SemVer-compliant regex to find versions like '1.2.3' or '1.2.3-beta.1'
         $match = Select-String -Path $filePath -Pattern '__version__\s*=\s*[''"](\d+\.\d+\.\d+(-[a-zA-Z0-9.-]*)?)[''"]'
         
         if ($match -and $match.Matches.Groups.Count -gt 1) {
           $version = $match.Matches.Groups[1].Value
           $is_prerelease = $version.Contains("-")
-          
-          Write-Output "Extracted version: $version"
-          Write-Output "Is pre-release: $is_prerelease"
-          
           "version=$version" >> $env:GITHUB_OUTPUT
           "is_prerelease=$is_prerelease" >> $env:GITHUB_OUTPUT
         } else {
-          Write-Error "SemVer version pattern not found in $filePath"
+          Write-Error "Version not found"
           exit 1
         }
 
-    # The following steps will now always run for every push to master.
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
@@ -51,55 +114,33 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
         pip install -r requirements.txt pyinstaller
 
     - name: Build with PyInstaller
       run: |
         pyinstaller --onedir --noconsole --add-data "resources;resources/" src/main.py -n wvd
-        Write-Host "Build completed successfully."
 
-    - name: Compress build artifact to ZIP
+    - name: Compress build artifact
       shell: pwsh
       run: |
-        # Copy changelog into the build directory before zipping
         Copy-Item -Path './CHANGES_LOG.md' -Destination './dist/wvd/' -Force
         Compress-Archive -Path ./dist/wvd/* -DestinationPath ./dist/wvd.zip -Force
-        Get-ChildItem dist/wvd.zip
 
-    - name: Prepare Release Notes and Metadata
+    - name: Prepare Release Notes
       id: prepare-release-meta
       shell: pwsh
       run: |
         $md5 = (Get-FileHash -Path dist/wvd.zip -Algorithm MD5).Hash.ToLower()
-        echo "md5=$md5" >> $env:GITHUB_OUTPUT
-        echo "MD5: $md5"
-        
         $date = Get-Date -Format "yyyy-MM-dd HH:mm:ss" -AsUTC
         $version = "${{ steps.extract-version.outputs.version }}"
-
-        # 生成 release_notes.md (用于 GitHub Release)
         $releaseContent = "**Version**: {0}`n**MD5**: ``{1}```n**Build Date**: {2}" -f $version, $md5, $date
         $releaseContent | Out-File -FilePath dist/release_notes.md -Encoding utf8
-
-        # 生成 release.json (用于 GitHub Pages)
-        $releaseData = @{
-          version = $version
-          md5 = $md5
-          release_date = $date
-          download_url = "https://github.com/${{ github.repository }}/releases/download/$version/wvd.zip"
-          release_notes = "https://github.com/${{ github.repository }}/releases/tag/$version"
-        } | ConvertTo-Json
-
-        # 创建 gh-pages 目录并保存文件
-        New-Item -ItemType Directory -Path gh-pages -Force
-        $releaseData | Out-File -FilePath gh-pages/release.json -Encoding utf8
 
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v2
       with:
-        tag_name: v${{ steps.extract-version.outputs.version }}
-        name: Release v${{ steps.extract-version.outputs.version }}
+        tag_name: ${{ steps.extract-version.outputs.version }}
+        name: Release ${{ steps.extract-version.outputs.version }}
         body_path: dist/release_notes.md
         files: dist/wvd.zip
 
@@ -111,22 +152,26 @@ jobs:
           const release = await github.rest.repos.getReleaseByTag({
             owner: context.repo.owner,
             repo: context.repo.repo,
-            tag: 'v${{ steps.extract-version.outputs.version }}'
+            tag: '${{ steps.extract-version.outputs.version }}'
           });
-          
           await github.rest.repos.updateRelease({
             owner: context.repo.owner,
             repo: context.repo.repo,
             release_id: release.data.id,
             prerelease: true
           });
+```
 
-    # This step will only run for stable (non-prerelease) versions
-    - name: Deploy to GitHub Pages
-      if: ${{ steps.extract-version.outputs.is_prerelease == 'false' }}
-      uses: peaceiris/actions-gh-pages@v4
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./gh-pages
-        # This will overwrite the existing release.json with the new one
-        keep_files: false
+---
+
+## 注意事項
+
+1. **版本號格式**：必須符合 `vX.Y.Z` 或 `vX.Y.Z-suffix` 格式
+2. **預發布版本**：版本號包含 `-`（如 `-custom.2`）會自動標記為 Pre-release
+3. **重新發布**：如需更新同一版本，先刪除遠程 tag 再重新推送：
+   ```bash
+   git tag -d vX.X.X
+   git push origin :refs/tags/vX.X.X
+   git tag vX.X.X
+   git push origin vX.X.X
+   ```
