--- a/打包與發布說明.md
+++ b/打包與發布說明.md
@@ -26,9 +26,9 @@ localpack.bat
 
 ### 觸發條件
 
-1. **推送到 master 分支**：每次推送都會觸發
-2. **推送 v 開頭的 tag**：如 `v1.9.25-custom.2`
-3. **手動觸發**：在 GitHub Actions 頁面點擊 "Run workflow"
+**只有推送 v 開頭的 tag 時才會觸發**，例如：`v1.9.25`
+
+推送代碼到 master **不會**觸發發布流程。
 
 ### 工作流程
 
@@ -36,142 +36,81 @@ localpack.bat
 2. 安裝依賴並使用 PyInstaller 打包
 3. 創建 `wvd.zip` 壓縮包
 4. 創建 GitHub Release 並上傳 ZIP
+5. 如果版本號包含 `-`（如 `-beta.1`），標記為 Pre-release
 
-### 版本號格式
+---
 
-`src/main.py` 中的版本號必須符合 SemVer 格式且**帶 v 前綴**：
+## 發布新版本步驟
+
+### 1. 更新版本號
+
+編輯 `src/main.py` 中的 `__version__`：
 
 ```python
-__version__ = 'v1.9.25-custom.2'  # ✓ 正確
-__version__ = '1.9.25-custom.2'   # ✗ 錯誤（與 tag 不匹配）
+__version__ = '1.9.26'  # 正式版（顯示為 Latest）
+# 或
+__version__ = '1.9.26-beta.1'  # 預發布版（顯示為 Pre-release）
 ```
 
-### 發布新版本步驟
+**注意**：代碼中的版本號**不帶 `v` 前綴**，workflow 會自動加上。
+
+### 2. 提交並推送代碼
 
 ```bash
-# 1. 更新版本號
-# 編輯 src/main.py 中的 __version__
-
-# 2. 提交並推送
 git add -A
-git commit -m "release: vX.X.X"
+git commit -m "release: v1.9.26"
 git push origin master
-
-# 3. 創建並推送 tag
-git tag vX.X.X
-git push origin vX.X.X
 ```
 
-### 查看構建狀態
+此時 **不會** 觸發發布流程。
+
+### 3. 創建並推送 Tag
+
+```bash
+git tag v1.9.26
+git push origin v1.9.26
+```
+
+此時 **會** 觸發發布流程，自動創建 Release。
+
+### 4. 查看構建狀態
 
 前往 https://github.com/adolphlai/wvd/actions
 
 ---
 
-## Workflow 原始碼
+## 版本號規則
 
-檔案位置：`.github/workflows/build-executable.yml`
+| 代碼版本號 | Git Tag | Release 標題 | 狀態 |
+|-----------|---------|-------------|------|
+| `1.9.25` | `v1.9.25` | `Release v1.9.25` | **Latest** |
+| `1.9.25-beta.1` | `v1.9.25-beta.1` | `Release v1.9.25-beta.1` | Pre-release |
+| `1.9.25-custom.2` | `v1.9.25-custom.2` | `Release v1.9.25-custom.2` | Pre-release |
 
-```yaml
-name: Build Executable and Create Release
+**規則**：版本號包含 `-` 就是 Pre-release
 
-on:
-  push:
-    branches: [ master ]
-    tags:
-      - 'v*'
-  workflow_dispatch:
+---
 
-jobs:
-  build:
-    runs-on: windows-latest
+## 重新發布同一版本
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+如果需要更新同一版本的 Release：
 
-    - name: Extract SemVer version from src\main.py
-      id: extract-version
-      shell: pwsh
-      run: |
-        $filePath = ".\src\main.py"
-        $match = Select-String -Path $filePath -Pattern '__version__\s*=\s*[''"](\d+\.\d+\.\d+(-[a-zA-Z0-9.-]*)?)[''"]'
-        
-        if ($match -and $match.Matches.Groups.Count -gt 1) {
-          $version = $match.Matches.Groups[1].Value
-          $is_prerelease = $version.Contains("-")
-          "version=$version" >> $env:GITHUB_OUTPUT
-          "is_prerelease=$is_prerelease" >> $env:GITHUB_OUTPUT
-        } else {
-          Write-Error "Version not found"
-          exit 1
-        }
+```bash
+# 1. 刪除本地和遠程 tag
+git tag -d v1.9.25
+git push origin :refs/tags/v1.9.25
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
-
-    - name: Install dependencies
-      run: |
-        pip install -r requirements.txt pyinstaller
-
-    - name: Build with PyInstaller
-      run: |
-        pyinstaller --onedir --noconsole --add-data "resources;resources/" src/main.py -n wvd
-
-    - name: Compress build artifact
-      shell: pwsh
-      run: |
-        Copy-Item -Path './CHANGES_LOG.md' -Destination './dist/wvd/' -Force
-        Compress-Archive -Path ./dist/wvd/* -DestinationPath ./dist/wvd.zip -Force
-
-    - name: Prepare Release Notes
-      id: prepare-release-meta
-      shell: pwsh
-      run: |
-        $md5 = (Get-FileHash -Path dist/wvd.zip -Algorithm MD5).Hash.ToLower()
-        $date = Get-Date -Format "yyyy-MM-dd HH:mm:ss" -AsUTC
-        $version = "${{ steps.extract-version.outputs.version }}"
-        $releaseContent = "**Version**: {0}`n**MD5**: ``{1}```n**Build Date**: {2}" -f $version, $md5, $date
-        $releaseContent | Out-File -FilePath dist/release_notes.md -Encoding utf8
-
-    - name: Create GitHub Release
-      uses: softprops/action-gh-release@v2
-      with:
-        tag_name: ${{ steps.extract-version.outputs.version }}
-        name: Release ${{ steps.extract-version.outputs.version }}
-        body_path: dist/release_notes.md
-        files: dist/wvd.zip
-
-    - name: Force set as prerelease
-      if: ${{ steps.extract-version.outputs.is_prerelease == 'true' }}
-      uses: actions/github-script@v6
-      with:
-        script: |
-          const release = await github.rest.repos.getReleaseByTag({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            tag: '${{ steps.extract-version.outputs.version }}'
-          });
-          await github.rest.repos.updateRelease({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            release_id: release.data.id,
-            prerelease: true
-          });
+# 2. 重新創建並推送
+git tag v1.9.25
+git push origin v1.9.25
 ```
 
 ---
 
-## 注意事項
+## 手動觸發
 
-1. **版本號格式**：必須符合 `vX.Y.Z` 或 `vX.Y.Z-suffix` 格式
-2. **預發布版本**：版本號包含 `-`（如 `-custom.2`）會自動標記為 Pre-release
-3. **重新發布**：如需更新同一版本，先刪除遠程 tag 再重新推送：
-   ```bash
-   git tag -d vX.X.X
-   git push origin :refs/tags/vX.X.X
-   git tag vX.X.X
-   git push origin vX.X.X
-   ```
+在 GitHub Actions 頁面可以手動觸發 workflow：
+
+1. 前往 https://github.com/adolphlai/wvd/actions
+2. 選擇 "Build Executable and Create Release"
+3. 點擊 "Run workflow"
