--- a/戰鬥流程邏輯說明.md
+++ b/戰鬥流程邏輯說明.md
@@ -28,21 +28,21 @@
 │     │
 │     └─ 無施法序列 → 進入步驟 3
 │
-├─ 3. ★ 重啟後第一次戰鬥 (_FIRST_COMBAT_AFTER_RESTART = True)
+├─ 3. ★ 重啟後前2次戰鬥 (_FIRST_COMBAT_AFTER_RESTART > 0)
 │     │  【優先於自動戰鬥！】
 │     │
 │     ├─ 功能已啟用 (_FORCE_PHYSICAL_FIRST_COMBAT = True)
-│     │     ├─ 關閉自動戰鬥（如果已開啟）
+│     │     ├─ 打斷自動戰鬥（點擊畫面空白處）
 │     │     ├─ 使用強力單體技能 → 結束
 │     │     └─ 找不到技能 → 進入步驟 5
 │     │
-│     └─ 功能已關閉 → 進入步驟 5
+│     └─ 功能已關閉 → 進入步驟 4
 │
-├─ 4. ★ 村莊返回後第一次戰鬥 (_FIRST_COMBAT_AFTER_INN = True)
+├─ 4. ★ 村莊返回後前2次戰鬥 (_FIRST_COMBAT_AFTER_INN > 0)
 │     │  【優先於自動戰鬥！】
 │     │
-│     ├─ 功能已啟用 (_FORCE_PHYSICAL_FIRST_COMBAT = True)
-│     │     ├─ 關閉自動戰鬥（如果已開啟）
+│     ├─ 功能已啟用 (_FORCE_PHYSICAL_AFTER_INN = True)
+│     │     ├─ 打斷自動戰鬥（點擊畫面空白處）
 │     │     ├─ 使用強力單體技能 → 結束
 │     │     └─ 找不到技能 → 進入步驟 5
 │     │
@@ -102,21 +102,15 @@
 
 ## 強力單體技能處理 (useForcedPhysicalSkill)
 
-> **觸發條件**：重啟後第一次戰鬥 或 村莊返回後第一次戰鬥
+> **觸發條件**：重啟後前2次戰鬥 或 村莊返回後前2次戰鬥
 
 ```
 【強力單體技能處理】
 │
-├─ 檢查功能開關 (_FORCE_PHYSICAL_FIRST_COMBAT)
-│     │
-│     └─ 已關閉 → 記錄日誌 → 返回 False
-│
 ├─ 記錄日誌：{原因}，强制使用强力单体技能
 │
-├─ ★ 關閉自動戰鬥（如果已開啟）
-│     ├─ 檢測 autoBattleEnable 圖片
-│     ├─ 點擊關閉
-│     └─ 重新截圖
+├─ ★ 打斷自動戰鬥
+│     └─ 點擊畫面空白處 [1,1] 三次，每次間隔 0.5 秒
 │
 ├─ 遍歷 PHYSICAL_SKILLS 列表
 │     │
@@ -215,9 +209,10 @@
 | `_AUTO_AFTER_AOE` | AOE 後開啟自動戰鬥 |
 | `_ENOUGH_AOE` | 本場戰鬥是否已釋放全體 AOE |
 | `_SUICIDE` | 自殺模式（全員防禦等死） |
-| `_FORCE_PHYSICAL_FIRST_COMBAT` | 重啟/返回後首戰使用強力單體技能開關 |
-| `_FIRST_COMBAT_AFTER_RESTART` | 重啟後第一次戰鬥標誌 |
-| `_FIRST_COMBAT_AFTER_INN` | 村莊返回後第一次戰鬥標誌 |
+| `_FORCE_PHYSICAL_FIRST_COMBAT` | 重啟後前2次戰鬥使用強力單體技能開關 |
+| `_FORCE_PHYSICAL_AFTER_INN` | 返回後前2次戰鬥使用強力單體技能開關 |
+| `_FIRST_COMBAT_AFTER_RESTART` | 重啟後戰鬥計數器（初始=2，每次戰鬥-1） |
+| `_FIRST_COMBAT_AFTER_INN` | 返回後戰鬥計數器（初始=2，每次戰鬥-1） |
 | `_SPELLSKILLCONFIG` | 使用者配置的技能列表 |
 | `_ACTIVESPELLSEQUENCE` | 施法序列（特定副本使用） |
 
@@ -231,8 +226,9 @@
 | `_COMBATSPD` | bool | False | 是否已開啟 2 倍速 |
 | `_ENOUGH_AOE` | bool | False | 本場是否已釋放全體 AOE |
 | `_SUICIDE` | bool | False | 自殺模式標誌 |
-| `_FIRST_COMBAT_AFTER_RESTART` | bool | True | 重啟後第一次戰鬥標誌 |
-| `_FIRST_COMBAT_AFTER_INN` | bool | False | 村莊返回後第一次戰鬥標誌 |
+| `_FIRST_COMBAT_AFTER_RESTART` | int | 0 | 重啟後戰鬥計數器（restartGame時設為2） |
+| `_FIRST_COMBAT_AFTER_INN` | int | 0 | 返回後戰鬥計數器（每次進入地城時設為2） |
+| `_FORCE_PHYSICAL_CURRENT_COMBAT` | bool | False | 當前戰鬥是否使用強力單體技能 |
 | `_COUNTERCOMBAT` | int | 0 | 戰鬥次數統計 |
 
 ---
