docs: add pyscrcpy local packaging instructions

--- a/doc/打包與發布說明.md
+++ b/doc/打包與發布說明.md
@@ -15,10 +15,23 @@ localpack.bat
 1. 安裝 Anaconda
 2. 創建名為 `vpy` 的虛擬環境
 3. 修改 `localpack.bat` 中的 `ANACONDA_PATH` 為你的 Anaconda 路徑
+4. **（可選）安裝 pyscrcpy 串流支援**：
+   ```bash
+   pip install pyscrcpy av
+   ```
 
 ### 輸出
 
 打包完成後，可執行文件位於：`dist/wvd/wvd.exe`
+
+### 包含 pyscrcpy 串流功能
+
+由於 pyscrcpy/av 在 GitHub Actions CI 環境無法安裝，需要使用本地打包來生成包含串流功能的版本：
+
+1. 確保虛擬環境已安裝 `pyscrcpy` 和 `av`
+2. 運行 `localpack.bat` 打包
+3. 將 `dist/wvd/` 壓縮為 `wvd.zip`
+4. 前往 GitHub Release 頁面手動上傳 `wvd.zip` 替換 CI 生成的版本
 
 ---
 
