docs: add AI reminder for manual packaging in release workflow

--- a/doc/打包與發布說明.md
+++ b/doc/打包與發布說明.md
@@ -1,5 +1,14 @@
 # 打包與發布說明
 
+> [!CAUTION]
+> **AI 助手請注意**：由於 pyscrcpy/av 無法在 GitHub Actions CI 環境安裝，每次發布新版本時必須**提醒用戶手動執行本地打包並上傳**到 GitHub Release，否則 Release 版本將不包含串流截圖功能。
+> 
+> **發布流程**：
+> 1. 更新版本號 → 提交 → 推送 tag（觸發 CI）
+> 2. **CI 完成後**，用戶需運行 `localpack.bat` 本地打包
+> 3. 將 `dist/wvd/` 壓縮為 `wvd.zip`
+> 4. 到 GitHub Release 頁面**手動上傳替換** CI 生成的 wvd.zip
+
 ## 本地打包
 
 ### 使用方式
