--- a/doc/自動戰鬥模式狀態控制分析.md
+++ b/doc/自動戰鬥模式狀態控制分析.md
@@ -98,6 +98,8 @@ def restartGame(skipScreenShot = False):
     runtimeContext._DUNGEON_CONFIRMED = False     # 重置地城確認
     runtimeContext._RESTART_PENDING_BATTLE_RESET = True  # ★ 關鍵標誌
     reset_ae_caster_flags()  # 重置所有 AE 相關旗標
+    # [重要] 必須在 reset 後設置，否則旗標會被重置函數清空
+    runtimeContext._RESTART_SKIP_INTERVAL_THIS_DUNGEON = True
 ```
 
 | 變數 | 初始值 | 說明 |
@@ -211,3 +213,25 @@ if (runtimeContext._DUNGEON_CONFIRMED and
 | `StateCombat()` (line ~3542) | 戰鬥狀態處理 |
 | `IdentifyState()` (line ~2144) | 狀態識別與黑屏打斷 |
 | `should_enable_auto_combat()` (line ~3379) | 自動戰鬥判斷 |
+
+---
+
+## 腳本啟動與重啟場景狀態對照表
+
+| 功能特性 | 村莊啟動 (正常流程) | 地城內啟動 (中途掛機) | 當機後重啟 (自動恢復) |
+| :--- | :--- | :--- | :--- |
+| **技能施放設定** | 根據模式選擇 (從首戰開始) | 根據模式選擇 (從首戰開始) | 根據模式選擇 (重置為首戰) |
+| **自動戰鬥** | 根據模式選擇 (依戰鬥場數) | 根據模式選擇 (依戰鬥場數) | 根據模式選擇 (重裝後的首戰) |
+| **解除麻痺\|封技** | 解除後根據模式選擇 | 解除後根據模式選擇 | 解除之後根據模式選擇 |
+| **防止轉圈 (平移)** | **不啟動** (預設已執行) | **不啟動** (明確跳過) | **啟動** (強制執行一次) |
+| **連續戰鬥 (計數)** | **不啟動** (從 0 開始) | **不啟動** (判定為 0) | **啟動** (保持當前地城次數) |
+| **黑屏打斷** | **啟動** (正常偵測) | **啟動** (代碼已開放觸發) | **啟動** (正常偵測) |
+| **間隔判斷 (AE)** | 正常判斷 (根據地城次數) | 正常判斷 (根據地城次數) | **跳過** (本次地城強制手動) |
+
+### 詳細邏輯補充說明：
+
+1.  **技能與自動戰鬥**：這三種情況都會在進入戰鬥時將「戰鬥場數」初始化，因此都會觸發 UI 設定的「首戰技能」。
+2.  **防止轉圈 (`_STEPAFTERRESTART`)**：只有在 `restartGame()` 觸發時會設為 `False` 並執行平移。
+3.  **連續戰鬥 (`_COUNTERDUNG`)**：重啟時不會清空此計數器，以維持連續刷地城的邏輯。
+4.  **間隔判斷 (AE)**：重啟後的當前地城會跳過間隔檢查（強制手動/依模式施放），新地城則恢復正常。
+    - **注意**：在 `restartGame` 中設置該旗標時，必須在 `reset_ae_caster_flags()` 調用之後，否則會被重置函數清空。
